@@ -66,40 +66,41 @@ if (isset($config['memory_limit']) && $config['memory_limit'] != '') {
 
 /* Files that do not need http header information - Command line scripts */
 $no_http_header_files = array(
-	"cmd.php",
-	"poller.php",
-	"poller_commands.php",
-	"script_server.php",
-	"query_host_cpu.php",
-	"query_host_partitions.php",
-	"sql.php",
-	"ss_host_cpu.php",
-	"ss_host_disk.php",
-	"ss_sql.php",
 	"add_device.php",
 	"add_graphs.php",
 	"add_perms.php",
 	"add_tree.php",
+	"cmd.php",
 	"copy_user.php",
-	"device_update_template.php",
-	"poller_export.php",
-	"poller_graphs_reapply_names.php",
-	"poller_output_empty.php",
-	"poller_reindex_devices.php",
-	"rebuild_poller_cache.php",
 	"data_query_add.php",
 	"data_query_list.php",
 	"data_source_remove.php",
 	"device_add.php",
 	"device_list.php",
 	"device_template_list.php",
+	"device_update_template.php",
 	"graph_add.php",
 	"graph_list.php",
 	"perms_add.php",
+	"poller_commands.php",
+	"poller_export.php",
+	"poller_graphs_reapply_names.php",
+	"poller_output_empty.php",
+	"poller.php",
+	"poller_reindex_devices.php",
+	"query_host_cpu.php",
+	"query_host_partitions.php",
+	"rrd_datasource_add.php",
+	"rebuild_poller_cache.php",
+	"repair_database.php",
+	"script_server.php",
+	"sql.php",
+	"ss_host_cpu.php",
+	"ss_host_disk.php",
+	"ss_sql.php",
+	"structure_rra_paths.php",
 	"tree_add.php",
 	"user_copy.php",
-	"repair_database.php",
-	"structure_rra_paths.php"
 );
 
 $colors = array();
